--- a/src/components/body/work/work-card.css
+++ b/src/components/body/work/work-card.css
@@ -15,7 +15,16 @@
     align-items: flex-start;
     flex-direction: column;
 }
+.company-name{
+    font-size: 18px;
+}
+.company-desg{
+    font-size: 15px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+}
 .work-dates{
+    font-size: 15px;
     color: gray;    
 }
 .work-desc{
